--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,2 +1,8 @@
-﻿port: "8000
-"
+﻿port: "8000"
+
+db:
+    host: "146.19.207.54"
+    port: "5432"
+    user: "postgres"
+    database: "postgres"
+    sslmode: "disable"
